--- a/spam_detection.ipynb
+++ b/spam_detection.ipynb
@@ -16,21 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\pcI7\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\pcI7\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -49,9 +37,6 @@
       "2        NaN        NaN  \n",
       "3        NaN        NaN  \n",
       "4        NaN        NaN  \n",
-      "\n",
-      "Column Names:\n",
-      "Index(['v1', 'v2', 'Unnamed: 2', 'Unnamed: 3', 'Unnamed: 4'], dtype='object')\n",
       "\n",
       "Preprocessed Dataset:\n",
       "                                                  v2  \\\n",
@@ -73,13 +58,9 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "\n",
-    "# Download the 'punkt' resource\n",
-    "nltk.download('punkt')\n",
-    "nltk.download('stopwords')\n",
     "# Load the dataset\n",
     "df = pd.read_csv(\"spam.csv\", encoding=\"latin-1\")  # Adjust encoding if needed\n",
     "\n",
@@ -87,16 +68,28 @@
     "print(\"Original Dataset:\")\n",
     "print(df.head())\n",
     "\n",
-    "# Check the column names in your DataFrame\n",
-    "print(\"\\nColumn Names:\")\n",
-    "print(df.columns)\n",
+    "# Function to preprocess text\n",
+    "def preprocess_text(text):\n",
+    "    # Step 1: Removing special characters, punctuation, and numbers\n",
+    "    cleaned_text = re.sub('[^A-Za-z]+', ' ', text)\n",
+    "    \n",
+    "    # Step 2: Converting text to lowercase\n",
+    "    lowercase_text = cleaned_text.lower()\n",
+    "    \n",
+    "    # Step 3: Tokenization - Breaking down the text into individual words (tokens)\n",
+    "    tokens = word_tokenize(lowercase_text)\n",
+    "    \n",
+    "    # Step 4: Removing stop words\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    filtered_tokens = [word for word in tokens if word.lower() not in stop_words]\n",
+    "    \n",
+    "    # Join the filtered tokens into a string\n",
+    "    processed_text = ' '.join(filtered_tokens)\n",
+    "    \n",
+    "    return processed_text\n",
     "\n",
-    "# Make sure to replace 'v2' and 'v1' with the actual column names in your dataset\n",
-    "text_column_name = 'v2'\n",
-    "label_column_name = 'v1'\n",
-    "\n",
-    "# Preprocess text directly in the DataFrame\n",
-    "df['processed_text'] = df[text_column_name].apply(lambda x: ' '.join([word.lower() for word in word_tokenize(re.sub('[^A-Za-z]+', ' ', str(x))) if word.lower() not in set(stopwords.words('english'))]))\n",
+    "# Apply text preprocessing to the 'text' column in the dataset\n",
+    "df['processed_text'] = df['v2'].apply(preprocess_text)\n",
     "\n",
     "# Display the preprocessed dataset\n",
     "print(\"\\nPreprocessed Dataset:\")\n",
@@ -122,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,6 +129,157 @@
     "\n",
     "# Convert the result to a DataFrame (optional)\n",
     "tfidf_df = pd.DataFrame(X_tfidf.toarray(), columns=tfidf_vectorizer.get_feature_names_out())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Split data</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Define the feature matrix (X) and target vector (y)\n",
+    "X = tfidf_df\n",
+    "y = df['v1']\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Model training</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Create a Logistic Regression model\n",
+    "model = LogisticRegression()\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Model Evaluation</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.95\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ham       0.95      0.99      0.97       965\n",
+      "        spam       0.95      0.67      0.78       150\n",
+      "\n",
+      "    accuracy                           0.95      1115\n",
+      "   macro avg       0.95      0.83      0.88      1115\n",
+      "weighted avg       0.95      0.95      0.95      1115\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[960   5]\n",
+      " [ 50 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "\n",
+    "# Predictions on the testing set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {accuracy:.2f}\")\n",
+    "\n",
+    "# Display classification report and confusion matrix\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(confusion_matrix(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Model Usage</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction for the new SMS: ham\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pcI7\\AppData\\Roaming\\Python\\Python311\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "new_sms = [\"Hi, how are u doing\"]\n",
+    "new_sms_processed = [preprocess_text(text) for text in new_sms]\n",
+    "new_sms_tfidf = tfidf_vectorizer.transform(new_sms_processed)\n",
+    "prediction = model.predict(new_sms_tfidf)\n",
+    "\n",
+    "print(f\"Prediction for the new SMS: {prediction[0]}\")\n",
+    "\n"
    ]
   }
  ],
